--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Bootstrap 4 project documentation theme for developers</title>
+    <title>FoT Workshop Resources Portal</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -38,11 +38,11 @@
                 <div class="branding">
                     <h1 class="logo">
                         <span aria-hidden="true" class="icon_documents_alt icon"></span>
-                        <span class="text-highlight">Pretty</span><span class="text-bold">Docs</span>
+                        <span class="text-highlight">STEMP ALP FoT Workshop</span><span class="text-bold">Resources Portal</span>
                     </h1>
                 </div><!--//branding-->
                 <div class="tagline">
-                    <p>Free Bootstrap 4 theme for your project documentation</p>
+                    <p>All you need to get started for STEM ALP FoT Workshop</p>
                     <p>Designed with <i class="fas fa-heart"></i> for developers</p>
                 </div><!--//tagline-->
                 
