--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 </div><!--//branding-->
                 <div class="tagline">
                     <p>All you need to get started for STEM ALP FoT Workshop</p>
-                    <p>Designed with <i class="fas fa-heart"></i> for developers</p>
-			<h4> Made possible by </h4>
+                    <h6> Made possible by </h6>
+	            <img src="./assets/images/credits.png" alt="credits" width="500" height="200">
                 </div><!--//tagline-->
         </header><!--//header-->
         
