--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="tagline">
                     <p>All you need to get started for STEM ALP FoT Workshop</p>
                     <h6> Made possible by </h6>
-	            <img src="./assets/images/credits.png" alt="credits">
+	            <img src="./assets/images/credits.png" alt="credits" width="1000" height="137">
                 </div><!--//tagline-->
         </header><!--//header-->
         
@@ -54,7 +54,7 @@
                 <div class="intro">
                     <p>Welcome to STEM ALP FoT Workshop. This resources portal will have all you need to get started and follow along the workshop.</p>
                     <div class="cta-container">
-			<img src="./assets/images/ucode.png" alt="ucode" >
+			<img src="./assets/images/ucode.png" alt="ucode" width="100" height="100">
                         <a class="btn btn-primary btn-cta" href="https://www.ubtechedu.com/global/down_cat-1.html" target="_blank"><i class="fas fa-cloud-
 				-alt"></i> Download uCode Now</a>
                     </div><!--//cta-container-->
