--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                             <div class="icon-holder">
                                 <i class="icon fa fa-paper-plane"></i>
                             </div><!--//icon-holder-->
-                            <h3 class="title">Quick Start</h3>
-                            <p class="intro">Demo example, consectetuer adipiscing elit</p>
+                            <h3 class="title">AI Car Building Guide</h3>
+                            <p class="intro">2D and videos building guide for AI Car</p>
                             <a class="link" href="start.html"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
