--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             </div><!--//icon-holder-->
                             <h3 class="title">AI Car Building Guide</h3>
                             <p class="intro">2D and videos building guide for AI Car</p>
-                            <a class="link" href="start.html"><span></span></a>
+                            <a class="link" href="https://github.com/VincentK16/FoT/raw/main/assets/pdf/FORM%201.pdf"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
                     <div class="item item-pink item-2 col-lg-4 col-6">
