--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                             </div><!--//icon-holder-->
                             <h3 class="title">AI Car Building Guide</h3>
                             <p class="intro">2D and videos building guide for AI Car</p>
+			    <img src="./assets/images/aicar.png" alt="aicar" width="100" height="113">
                             <a class="link" href="https://github.com/VincentK16/FoT/raw/main/assets/pdf/FORM%201.pdf"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
