--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="tagline">
                     <p>All you need to get started for STEM ALP FoT Workshop</p>
                     <h6> Made possible by </h6>
-	            <img src="./assets/images/credits.png" alt="credits" width="1000" height="137" class="responsive">
+	            <img src="./assets/images/credits.png" alt="credits" width="1000" height="137" >
                 </div><!--//tagline-->
         </header><!--//header-->
         
