--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
                 <h2 class="title">Getting started is easy!</h2>
                 <div class="intro">
                     <p>Welcome to STEM ALP FoT Workshop. This resources portal will have all you need to get started and follow along the workshop.</p>
-                    <div class="cta-container">
+			<p> uCode will be the software used in the workshop </p>
 			<img src="./assets/images/ucode.png" alt="ucode" width="100" height="100">
+                    <div class="cta-container">
                         <a class="btn btn-primary btn-cta" href="https://www.ubtechedu.com/global/down_cat-1.html" target="_blank"><i class="fas fa-cloud-
 				-alt"></i> Download uCode Now</a>
                     </div><!--//cta-container-->
@@ -76,8 +77,8 @@
                             <div class="icon-holder">
                                 <span aria-hidden="true" class="icon icon_puzzle_alt"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title">Components</h3>
-                            <p class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</p>
+                            <h3 class="title">Getting Started with AI Magic World Kits</h3>
+                            <p class="intro">What are the components inside AI Magic World Kits as well some tips and tricks while having fun with it!</p>
                             <a class="link" href="components.html"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
@@ -86,8 +87,8 @@
                             <div class="icon-holder">
                                 <span aria-hidden="true" class="icon icon_datareport_alt"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title">Charts</h3>
-                            <p class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</p>
+                            <h3 class="title">Getting Started with uCode</h3>
+                            <p class="intro">Learn how to code the robots in uCode platform by UBTECH.</p>
                             <a class="link" href="charts.html"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
@@ -96,7 +97,7 @@
                             <div class="icon-holder">
                                 <span aria-hidden="true" class="icon icon_lifesaver"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title">FAQs</h3>
+                            <h3 class="title">How To Make Your Android/iPhone as Camera Sources for uCode</h3>
                             <p class="intro">Layout for FAQ page. Lorem ipsum dolor sit amet, consectetuer adipiscing elit</p>
                             <a class="link" href="faqs.html"><span></span></a>
                         </div><!--//item-inner-->
@@ -106,7 +107,7 @@
                             <div class="icon-holder">
                                 <span aria-hidden="true" class="icon icon_genius"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title">Showcase</h3>
+                            <h3 class="title">How to Train Machine Learning Model for Road Signs Clssifications</h3>
                             <p class="intro">Layout for showcase page. Lorem ipsum dolor sit amet, consectetuer adipiscing elit </p>
                             <a class="link" href="showcase.html"><span></span></a>
                         </div><!--//item-inner-->
