--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="branding">
                     <h1 class="logo">
                         <span aria-hidden="true" class="icon_documents_alt icon"></span>
-                        <span class="text-highlight">STEMP ALP FoT Workshop</span><span class="text-bold">Resources Portal</span>
+                        <span class="text-highlight">STEM ALP FoT Workshop</span><span class="text-bold">Resources Portal</span>
                     </h1>
                 </div><!--//branding-->
                 <div class="tagline">
