--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <h3 class="title">AI Car Building Guide</h3>
                             <p class="intro">2D and videos building guide for AI Car</p>
 			    <img src="./assets/images/aicar.png" alt="aicar" width="100" height="113">
-                            <a class="link" href="https://github.com/VincentK16/FoT/raw/main/assets/pdf/FORM%201.pdf"><span></span></a>
+                            <a class="link" href="https://github.com/VincentK16/FoT/raw/main/assets/pdf/1.%20AI%20Car%20Building%20Guide.pdf"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
                     <div class="item item-pink item-2 col-lg-4 col-6">
