--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                             <div class="icon-holder">
                                 <i class="icon fa fa-paper-plane"></i>
                             </div><!--//icon-holder-->
-                            <h3 class="title">AI Car Building Guide</h3>
-                            <p class="intro">2D and videos building guide for AI Car</p>
+                            <h3 class="title">0. How-To Getting Started with uKit Explore (HW) & uCode (SW)</h3>
+                            <p class="intro">Learn about the uKit Explore and uCode software platform to kickstart AI Robotics journey!</p>
 			    <img src="./assets/images/aicar.png" alt="aicar" width="100" height="113">
                             <a class="link" href="https://github.com/VincentK16/FoT/raw/main/assets/pdf/1.%20AI%20Car%20Building%20Guide.pdf"><span></span></a>
                         </div><!--//item-inner-->
@@ -77,8 +77,8 @@
                             <div class="icon-holder">
                                 <span aria-hidden="true" class="icon icon_puzzle_alt"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title">Getting Started with AI Magic World Kits</h3>
-                            <p class="intro">What are the components inside AI Magic World Kits as well some tips and tricks while having fun with it!</p>
+                            <h3 class="title">1. How-To Assemble AI Car & Props</h3>
+                            <p class="intro">2D and videos building guide for AI Car and Props (Map & Road Signs)</p>
                             <a class="link" href="components.html"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
@@ -97,8 +97,8 @@
                             <div class="icon-holder">
                                 <span aria-hidden="true" class="icon icon_lifesaver"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title">How To Make Your Android/iPhone as Camera Sources for uCode</h3>
-                            <p class="intro">Layout for FAQ page. Lorem ipsum dolor sit amet, consectetuer adipiscing elit</p>
+                            <h3 class="title">2. Android Mobile Camera As a Webcam Source for uCode software</h3>
+                            <p class="intro">Turn your Android mobile camera as a wecam source for uCode software used during machine learning training!</p>
                             <a class="link" href="faqs.html"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
@@ -107,8 +107,8 @@
                             <div class="icon-holder">
                                 <span aria-hidden="true" class="icon icon_genius"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title">How to Train Machine Learning Model for Road Signs Clssifications</h3>
-                            <p class="intro">Layout for showcase page. Lorem ipsum dolor sit amet, consectetuer adipiscing elit </p>
+                            <h3 class="title">3. Train Machine Learning model for AI Car in uCode for road signs classification</h3>
+                            <p class="intro">Learn how to train simple machine learning model for AI car to recognize different road signs!</p>
                             <a class="link" href="showcase.html"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
@@ -117,9 +117,9 @@
                             <div class="icon-holder">
                                 <span aria-hidden="true" class="icon icon_gift"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title">License &amp; Credits</h3>
-                            <p class="intro">Layout for license &amp; credits page. Consectetuer adipiscing elit.</p>
-                            <a class="link" href="license.html"><span></span></a>
+                            <h3 class="title">FAQ for uKit Explore</h3>
+                            <p class="intro">Common issues faced while exploring uKit Explore and uCode.</p>
+                            <a class="link" href="https://sjcosmofuture-my.sharepoint.com/:w:/p/vincentkok/EcfC_iE-tFlIn7-EDFWMAZABNrmz9spf2pOyToadMXqLrg?e=Ujgg7X"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
                 </div><!--//cards-->
