--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                             <div class="icon-holder">
                                 <span aria-hidden="true" class="icon icon_datareport_alt"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title">Getting Started with uCode</h3>
-                            <p class="intro">Learn how to code the robots in uCode platform by UBTECH.</p>
+                            <h3 class="title">2. Android Mobile Camera As a Webcam Source for uCode software</h3>
+                            <p class="intro">Turn your Android mobile camera as a wecam source for uCode software used during machine learning training!</p>
                             <a class="link" href="charts.html"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
@@ -97,8 +97,8 @@
                             <div class="icon-holder">
                                 <span aria-hidden="true" class="icon icon_lifesaver"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title">2. Android Mobile Camera As a Webcam Source for uCode software</h3>
-                            <p class="intro">Turn your Android mobile camera as a wecam source for uCode software used during machine learning training!</p>
+                            <h3 class="title">3. Train Machine Learning model for AI Car in uCode for road signs classification</h3>
+                            <p class="intro">Learn how to train simple machine learning model for AI car to recognize different road signs!</p>
                             <a class="link" href="faqs.html"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
@@ -107,9 +107,9 @@
                             <div class="icon-holder">
                                 <span aria-hidden="true" class="icon icon_genius"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title">3. Train Machine Learning model for AI Car in uCode for road signs classification</h3>
-                            <p class="intro">Learn how to train simple machine learning model for AI car to recognize different road signs!</p>
-                            <a class="link" href="showcase.html"><span></span></a>
+                            <h3 class="title">FAQ for uKit Explore</h3>
+                            <p class="intro">Common issues faced while exploring uKit Explore and uCode.</p>
+                            <a class="link" href="https://sjcosmofuture-my.sharepoint.com/:w:/p/vincentkok/EcfC_iE-tFlIn7-EDFWMAZABNrmz9spf2pOyToadMXqLrg?e=Ujgg7X" target="_blank"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
                     <div class="item item-orange col-lg-4 col-6">
@@ -117,9 +117,9 @@
                             <div class="icon-holder">
                                 <span aria-hidden="true" class="icon icon_gift"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title">FAQ for uKit Explore</h3>
-                            <p class="intro">Common issues faced while exploring uKit Explore and uCode.</p>
-                            <a class="link" href="https://sjcosmofuture-my.sharepoint.com/:w:/p/vincentkok/EcfC_iE-tFlIn7-EDFWMAZABNrmz9spf2pOyToadMXqLrg?e=Ujgg7X"><span></span></a>
+                            <h3 class="title"></h3>
+                            <p class="intro"></p>
+                            <a class="link" href=""><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
                 </div><!--//cards-->
