--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                             <div class="icon-holder">
                                 <i class="icon fa fa-paper-plane"></i>
                             </div><!--//icon-holder-->
-                            <h3 class="title">0. How-To Getting Started with uKit Explore (HW) & uCode (SW)</h3>
-                            <p class="intro">Learn about the uKit Explore and uCode software platform to kickstart AI Robotics journey!</p>
-			    <img src="./assets/images/aicar.png" alt="aicar" width="100" height="113">
+                            <h3 class="title">Checklist for Teachers</h3>
+                            <p class="intro">A simple checklist for teachers involved in the STEM ALP Workshop: Autonomous Vehicle and uKit AI Car (uCode).</p>
+			    
                             <a class="link" href="https://github.com/VincentK16/FoT/raw/main/assets/pdf/1.%20AI%20Car%20Building%20Guide.pdf"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
@@ -77,9 +77,10 @@
                             <div class="icon-holder">
                                 <span aria-hidden="true" class="icon icon_puzzle_alt"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title">1. How-To Assemble AI Car & Props</h3>
-                            <p class="intro">2D and videos building guide for AI Car and Props (Map & Road Signs)</p>
-                            <a class="link" href="components.html"><span></span></a>
+                            <h3 class="title">0. How-To Getting Started with uKit Explore (HW) & uCode (SW)</h3>
+                            <p class="intro">Learn about the uKit Explore and uCode software platform to kickstart AI Robotics journey!</p>
+                            <img src="./assets/images/0.png" alt="aicar" width="100">
+			    <a class="link" href="components.html"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
                     <div class="item item-blue col-lg-4 col-6">
@@ -87,8 +88,9 @@
                             <div class="icon-holder">
                                 <span aria-hidden="true" class="icon icon_datareport_alt"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title">2. Android Mobile Camera As a Webcam Source for uCode software</h3>
-                            <p class="intro">Turn your Android mobile camera as a wecam source for uCode software used during machine learning training!</p>
+                            <h3 class="title">1. How-To Assemble AI Car & Props</h3>
+                            <p class="intro">2D and videos building guide for AI Car and Props (Map & Road Signs)</p>
+			    <img src="./assets/images/1.png" alt="aicar" width="100">
                             <a class="link" href="charts.html"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
@@ -97,9 +99,10 @@
                             <div class="icon-holder">
                                 <span aria-hidden="true" class="icon icon_lifesaver"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title">3. Train Machine Learning model for AI Car in uCode for road signs classification</h3>
-                            <p class="intro">Learn how to train simple machine learning model for AI car to recognize different road signs!</p>
-                            <a class="link" href="faqs.html"><span></span></a>
+                            <h3 class="title">2. Android Mobile Camera As a Webcam Source for uCode software</h3>
+                            <p class="intro">Turn your Android mobile camera as a wecam source for uCode software used during machine learning training!</p>
+                            <img src="./assets/images/2.png" alt="aicar" width="100">
+			    <a class="link" href="faqs.html"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
                     <div class="item item-primary col-lg-4 col-6">
@@ -107,9 +110,10 @@
                             <div class="icon-holder">
                                 <span aria-hidden="true" class="icon icon_genius"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title">FAQ for uKit Explore</h3>
-                            <p class="intro">Common issues faced while exploring uKit Explore and uCode.</p>
-                            <a class="link" href="https://sjcosmofuture-my.sharepoint.com/:w:/p/vincentkok/EcfC_iE-tFlIn7-EDFWMAZABNrmz9spf2pOyToadMXqLrg?e=Ujgg7X" target="_blank"><span></span></a>
+                            <h3 class="title">3. Train Machine Learning model for AI Car in uCode for road signs classification</h3>
+                            <p class="intro">Learn how to train simple machine learning model for AI car to recognize different road signs!</p>
+                            <img src="./assets/images/3.png" alt="aicar" width="100">
+			    <a class="link" href="https://sjcosmofuture-my.sharepoint.com/:w:/p/vincentkok/EcfC_iE-tFlIn7-EDFWMAZABNrmz9spf2pOyToadMXqLrg?e=Ujgg7X" target="_blank"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
                     <div class="item item-orange col-lg-4 col-6">
@@ -117,9 +121,9 @@
                             <div class="icon-holder">
                                 <span aria-hidden="true" class="icon icon_gift"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title"></h3>
-                            <p class="intro"></p>
-                            <a class="link" href=""><span></span></a>
+                            <h3 class="title">Fequently Asked Questions (FAQ)</h3>
+                            <p class="intro">Common issues faced while exploring uKit Explore and uCode.</p>
+                            <a class="link" href="https://sjcosmofuture-my.sharepoint.com/:w:/p/vincentkok/EcfC_iE-tFlIn7-EDFWMAZABNrmz9spf2pOyToadMXqLrg?e=Ujgg7X" target="_blank"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
                 </div><!--//cards-->
