--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             <h3 class="title">1. How-To Assemble AI Car & Props</h3>
                             <p class="intro">2D and videos building guide for AI Car and Props (Map & Road Signs)</p>
 			    <img src="./assets/images/1.png" alt="aicar" width="100">
-                            <a class="link" href="https://github.com/VincentK16/FoT/blob/main/assets/pdf/1.%20AI%20Car%20Building%20Guide.pdf" target="_blank"><span></span></a>
+                            <a class="link" href="https://vincentk16.github.io/1.%20How-To%20Assemble%20AI%20Car%20%26%20Props.pdf" target="_blank"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
                     <div class="item item-purple col-lg-4 col-6">
