--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                             <h3 class="title">0. How-To Getting Started with uKit Explore (HW) & uCode (SW)</h3>
                             <p class="intro">Learn about the uKit Explore and uCode software platform to kickstart AI Robotics journey!</p>
                             <img src="./assets/images/0.png" alt="aicar" width="100">
+			    <embed src="github.com/VincentK16/VincentK16.github.io/0.%20How-To%20Getting%20Started%20with%20uKit%20Explore%20(HW)%20%26%20uCode%20(SW).pdf" width="100%" height="745px" />
 			    <a class="link" href="https://vincentk16.github.io/0.%20How-To%20Getting%20Started%20with%20uKit%20Explore%20(HW)%20&%20uCode%20(SW).pdf" target="_blank"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
