--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
                             <h3 class="title">0. How-To Getting Started with uKit Explore (HW) & uCode (SW)</h3>
                             <p class="intro">Learn about the uKit Explore and uCode software platform to kickstart AI Robotics journey!</p>
                             <img src="./assets/images/0.png" alt="aicar" width="100">
-			    <iframe class="link" href="https://vincentk16.github.io/0.%20How-To%20Getting%20Started%20with%20uKit%20Explore%20(HW)%20&%20uCode%20(SW).pdf" target="_blank"></iframe>
+			    <iframe id="pdfviewer" src="http://docs.google.com/gview?embedded=true&url=https://vincentk16.github.io/0.%20How-To%20Getting%20Started%20with%20uKit%20Explore%20(HW)%20&%20uCode%20(SW).pdf&amp;embedded=true" frameborder="0" width="100%" height="100%"></iframe>
+				<iframe class="link" href="https://vincentk16.github.io/0.%20How-To%20Getting%20Started%20with%20uKit%20Explore%20(HW)%20&%20uCode%20(SW).pdf" target="_blank"></iframe>
 			    
                         </div><!--//item-inner-->
                     </div><!--//item-->
