--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             <h3 class="title">2. Android Mobile Camera As a Webcam Source for uCode software</h3>
                             <p class="intro">Turn your Android mobile camera as a wecam source for uCode software used during machine learning training!</p>
                             <img src="./assets/images/2.png" alt="aicar" width="100">
-			    <a class="link" href="faqs.html"><span></span></a>
+			    <a class="link" href="https://vincentk16.github.io/2.%20Android_iPhone%20Mobile%20Camera%20As%20a%20Webcam%20Source%20for%20uCode%20software.pdf" target="_blank"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
                     <div class="item item-primary col-lg-4 col-6">
@@ -114,7 +114,7 @@
                             <h3 class="title">3. Train Machine Learning model for AI Car in uCode for road signs classification</h3>
                             <p class="intro">Learn how to train simple machine learning model for AI car to recognize different road signs!</p>
                             <img src="./assets/images/3.png" alt="aicar" width="100">
-			    <a class="link" href="https://sjcosmofuture-my.sharepoint.com/:w:/p/vincentkok/EcfC_iE-tFlIn7-EDFWMAZABNrmz9spf2pOyToadMXqLrg?e=Ujgg7X" target="_blank"><span></span></a>
+			    <a class="link" href="https://vincentk16.github.io/3.%20Train%20Machine%20Learning%20model%20for%20AI%20Car%20in%20uCode%20for%20road%20signs%20classification.pdf" target="_blank"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
                     <div class="item item-orange col-lg-4 col-6">
