--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 </head> 
 
-<body style="background-image: url('background.png');" class="landing-page">   
+<body background="background.png" class="landing-page">   
 	
 	<!-- GITHUB BUTTON JS -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
