--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
                         <a class="btn btn-primary btn-cta" href="https://www.ubtechedu.com/global/down_cat-1.html" target="_blank"><i class="fas fa-cloud-
 				-alt"></i> Download uCode Now</a>
                     </div><!--//cta-container-->
+			<div class="cta-container">
+                        <a class="btn btn-primary btn-cta" href="https://github.com/VincentK16/FoT/raw/main/assets/codes/AI%20Car.ucd" target="_blank"><i class="fas fa-cloud-
+				-alt"></i> Download Sample Code</a>
+                    </div><!--//cta-container-->
                 </div><!--//intro-->
                 <div id="cards-wrapper" class="cards-wrapper row">
                     <div class="item item-green col-lg-4 col-6">
