--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>FoT Workshop Resources Portal</title>
+    <title>Autonomous Vehicles Workshop Resources Portal</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -38,12 +38,12 @@
                 <div class="branding">
                     <h1 class="logo">
                         <span aria-hidden="true" class="icon_documents_alt icon"></span>
-                        <span class="text-highlight">STEM ALP FoT Workshop </span><span class="text-bold">Resources Portal</span>
+                        <span class="text-highlight"> Autonomous Vehicles Workshop</span><span class="text-bold">Resources Portal</span>
                     </h1>
                 </div><!--//branding-->
                 <div class="tagline">
-                    <p>All you need to get started for STEM ALP FoT Workshop</p>
-                    <h6> Made possible by </h6>
+                    <p>All you need to get started for Autonomous Vehicles Workshop! </p>
+                    <h4>Jointly developed by ITE and SJ Cosmo Future in collaboration with Science Centre Singapore! </h4>
 	            <img src="./assets/images/credits.png" alt="credits" width="1000" height="137" >
                 </div><!--//tagline-->
         </header><!--//header-->
