--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
                 <div class="branding">
                     <h1 class="logo">
                         <span aria-hidden="true" class="icon_documents_alt icon"></span>
-                        <span class="text-highlight"> Autonomous Vehicles Workshop</span><span class="text-bold">Resources Portal</span>
+                        <span class="text-highlight">Autonomous Vehicles Workshop </span><span class="text-bold">Resources Portal</span>
                     </h1>
                 </div><!--//branding-->
                 <div class="tagline">
-                    <p>All you need to get started for Autonomous Vehicles Workshop! </p>
-                    <h4>Jointly developed by ITE and SJ Cosmo Future in collaboration with Science Centre Singapore! </h4>
+                    <h3>All you need to get started for Autonomous Vehicles Workshop! </h3>
+                    <h5><i>Jointly developed by ITE and SJ Cosmo Future in collaboration with Science Centre Singapore! </i></h5>
 	            <img src="./assets/images/credits.png" alt="credits" width="1000" height="137" >
                 </div><!--//tagline-->
         </header><!--//header-->
@@ -52,7 +52,7 @@
             <div class="container">
                 <h2 class="title">Getting started is easy!</h2>
                 <div class="intro">
-                    <p>Welcome to STEM ALP FoT Workshop. This resources portal will have all you need to get started and follow along the workshop.</p>
+                    <h3>Welcome to Autonomous Vehicles Workshop. This resources portal will have all you need to get started and follow along the workshop.</h3>
 			<p> uCode will be the software used in the workshop </p>
 			<img src="./assets/images/ucode.png" alt="ucode" width="100" height="100">
                     <div class="cta-container">
