--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 </head> 
 
-<body background="background.png" class="landing-page">   
+<body class="landing-page">   
 	
 	<!-- GITHUB BUTTON JS -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
@@ -43,16 +43,16 @@
                 </div><!--//branding-->
                 <div class="tagline">
                     <h3>All you need to get started for Autonomous Vehicles Workshop! </h3>
-                    <h5><i>Jointly developed by ITE and SJ Cosmo Future in collaboration with Science Centre Singapore! </i></h5>
 	            <img src="./assets/images/credits.png" alt="credits" width="1000" height="137" >
+		    <h5><i>Jointly developed by ITE and SJ Cosmo Future in collaboration with Science Centre Singapore! </i></h5>
                 </div><!--//tagline-->
         </header><!--//header-->
         
         <section class="cards-section text-center">
             <div class="container">
-                <h2 class="title">Getting started is easy!</h2>
+		    <h2 class="title"> <b>Getting started is easy! </b></h2>
                 <div class="intro">
-                    <h3>Welcome to Autonomous Vehicles Workshop. This resources portal will have all you need to get started and follow along the workshop.</h3>
+                    <h4>Welcome to Autonomous Vehicles Workshop. This resources portal will have all you need to get started and follow along the workshop.</h4>
 			<p> uCode will be the software used in the workshop </p>
 			<img src="./assets/images/ucode.png" alt="ucode" width="100" height="100">
                     <div class="cta-container">
