--- a/index.html
+++ b/index.html
@@ -44,15 +44,16 @@
                 <div class="tagline">
                     <h3>All you need to get started for Autonomous Vehicles Workshop! </h3>
 	            <img src="./assets/images/credits.png" alt="credits" width="1000" height="137" >
+			<br> </br>
 		    <h5><i>Jointly developed by ITE and SJ Cosmo Future in collaboration with Science Centre Singapore! </i></h5>
                 </div><!--//tagline-->
         </header><!--//header-->
         
         <section class="cards-section text-center">
             <div class="container">
-		    <h2 class="title"> <b>Getting started is easy! </b></h2>
                 <div class="intro">
-                    <h4>Welcome to Autonomous Vehicles Workshop. This resources portal will have all you need to get started and follow along the workshop.</h4>
+                    <h4> <i>Welcome to Autonomous Vehicles Workshop. This resources portal will have all you need to get started and follow along the workshop.</i></h4>
+			<h2 class="title"> <b>Getting started is easy! </b></h2>
 			<p> uCode will be the software used in the workshop </p>
 			<img src="./assets/images/ucode.png" alt="ucode" width="100" height="100">
                     <div class="cta-container">
@@ -71,7 +72,7 @@
                                 <i class="icon fa fa-paper-plane"></i>
                             </div><!--//icon-holder-->
                             <h3 class="title">Checklist for Teachers</h3>
-                            <p class="intro">A simple checklist for teachers involved in the STEM ALP Workshop: Autonomous Vehicle and uKit AI Car (uCode).</p>
+                            <p class="intro">A simple checklist for teachers involved in the Autonomous Vehicles Workshop.</p>
 			    
                             <a class="link" href="https://vincentk16.github.io/Checklist%20for%20STEM%20ALP%20Workshop.pdf" target="_blank"><span></span></a>
                         </div><!--//item-inner-->
