--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <h3 class="title">Checklist for Teachers</h3>
                             <p class="intro">A simple checklist for teachers involved in the Autonomous Vehicles Workshop.</p>
 			    
-                            <a class="link" href="https://vincentk16.github.io/Checklist%20for%20STEM%20ALP%20Workshop.pdf" target="_blank"><span></span></a>
+                            <a class="link" href="https://vincentk16.github.io/Checklist%20for%20Autonomous%20Vehicles%20Workshop.pdf" target="_blank"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
                     <div class="item item-pink item-2 col-lg-4 col-6">
