--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 				-alt"></i> Download uCode Now</a>
                     </div><!--//cta-container-->
 			<div class="cta-container">
-                        <a class="btn btn-primary btn-cta" href="https://github.com/VincentK16/FoT/raw/main/assets/codes/AI%20Car.ucd" target="_blank"><i class="fas fa-cloud-
+				<img src="./assets/images/samplecode_resize.png" alt="samplecode" width="100" height="100">
+				<a class="btn btn-primary btn-cta" href="https://github.com/VincentK16/FoT/raw/main/assets/codes/AI%20Car.ucd" target="_blank"><i class="fas fa-cloud-
 				-alt"></i> Download Sample Code</a>
                     </div><!--//cta-container-->
                 </div><!--//intro-->
