--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                             <div class="icon-holder">
                                 <span aria-hidden="true" class="icon icon_lifesaver"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title">2. Android Mobile Camera As a Webcam Source for uCode software</h3>
-                            <p class="intro">Turn your Android mobile camera as a wecam source for uCode software used during machine learning training!</p>
+                            <h3 class="title">2. Android/iPhone Mobile Camera As a Webcam Source for uCode software</h3>
+                            <p class="intro">Turn your Android/iPhone mobile camera as a webcam source for uCode software used during machine learning training!</p>
                             <img src="./assets/images/2.png" alt="aicar" width="100">
 			    <a class="link" href="https://vincentk16.github.io/2.%20Android_iPhone%20Mobile%20Camera%20As%20a%20Webcam%20Source%20for%20uCode%20software.pdf" target="_blank"><span></span></a>
                         </div><!--//item-inner-->
