--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         </div><!--//item-inner-->
                     </div><!--//item-->
                 </div><!--//cards-->
-                <p> If you had any problems accessing the resources, please contact Vincent at vincentkok@sjcosmofuture.com. Thank you! <\p>
+                <p> If you had any problems accessing the resources, please contact Vincent at <u>vincentkok@sjcosmofuture.com</u>. Thank you! </p>
             </div><!--//container-->
         </section><!--//cards-section-->
     </div><!--//page-wrapper-->
