--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div><!--//branding-->
                 <div class="tagline">
                     <h3>All you need to get started for Autonomous Vehicles Workshop! </h3>
-	            <img src="./assets/images/credits.png" alt="credits" width="1000" height="137" >
+	            <img src="./assets/images/credits.png" alt="credits" width="1000" height="137" class="responsive">
 			<br> </br>
 		    <h5><i>Jointly developed by ITE and SJ Cosmo Future in collaboration with Science Centre Singapore! </i></h5>
                 </div><!--//tagline-->
