--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="author" content="">    
     <link rel="shortcut icon" href="favicon.ico">  
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- FontAwesome JS -->
     <script defer src="assets/fontawesome/js/all.js"></script>
     <!-- Global CSS -->
@@ -136,6 +137,11 @@
                     </div><!--//item-->
                 </div><!--//cards-->
                 <p> If you had any problems accessing the resources, please contact Vincent at <u>vincentkok@sjcosmofuture.com</u>. Thank you! </p>
+		<a href="https://facebook.com/ubtechsg" target="blank" class="social-margin"> 
+                  <div class="social-icon facebook">
+                    <i class="fa fa-facebook" aria-hidden="true"></i> 
+                  </div>
+                </a>
             </div><!--//container-->
         </section><!--//cards-section-->
     </div><!--//page-wrapper-->
