--- a/index.html
+++ b/index.html
@@ -137,10 +137,22 @@
                     </div><!--//item-->
                 </div><!--//cards-->
                 <p> If you had any problems accessing the resources, please contact Vincent at <u>vincentkok@sjcosmofuture.com</u>. Thank you! </p>
-		<a href="https://facebook.com/ubtechsg" target="blank" class="social-margin"> 
+		<a href="https://www.facebook.com/ubtechrobotics.ap" target="blank" class="social-margin"> 
                   <div class="social-icon facebook">
                     <i class="fa fa-facebook" aria-hidden="true"></i> 
                   </div>
+                </a>
+		    
+		 <a href="https://www.linkedin.com/company/ubtech-robotics/" class="social-margin" target="blank">
+                  <div class="social-icon linkedin">
+                    <i class="fa fa-linkedin" aria-hidden="true"></i>
+                  </div> 
+                </a>
+		    
+		<a href="https://www.youtube.com/c/UBTECHRobotics/videos" target="blank"  class="social-margin">
+                  <div class="social-icon youtube">
+                    <i class="fa fa-youtube" aria-hidden="true"></i>
+                  </div> 
                 </a>
             </div><!--//container-->
         </section><!--//cards-section-->
