--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                     <div class="item item-pink item-2 col-lg-4 col-6">
                         <div class="item-inner">
                             <div class="icon-holder">
+				    <i class="far fa-thumbs-up"></i>
                                 <span aria-hidden="true" class="icon icon_puzzle_alt"></span>
                             </div><!--//icon-holder-->
                             <h3 class="title">0. How-To Getting Started with uKit Explore (HW) & uCode (SW)</h3>
@@ -95,6 +96,7 @@
                     <div class="item item-blue col-lg-4 col-6">
                         <div class="item-inner">
                             <div class="icon-holder">
+				    <i class="fas fa-tools"></i>
                                 <span aria-hidden="true" class="icon icon_datareport_alt"></span>
                             </div><!--//icon-holder-->
                             <h3 class="title">1. How-To Assemble AI Car & Props</h3>
@@ -106,6 +108,7 @@
                     <div class="item item-purple col-lg-4 col-6">
                         <div class="item-inner">
                             <div class="icon-holder">
+				    <i class="fas fa-mobile-alt"></i>
                                 <span aria-hidden="true" class="icon icon_lifesaver"></span>
                             </div><!--//icon-holder-->
                             <h3 class="title">2. Android/iPhone Mobile Camera As a Webcam Source for uCode software</h3>
@@ -117,6 +120,7 @@
                     <div class="item item-primary col-lg-4 col-6">
                         <div class="item-inner">
                             <div class="icon-holder">
+				    <i class="fas fa-car"></i>
                                 <span aria-hidden="true" class="icon icon_genius"></span>
                             </div><!--//icon-holder-->
                             <h3 class="title">3. Train Machine Learning model for AI Car in uCode for road signs classification</h3>
@@ -128,6 +132,7 @@
                     <div class="item item-orange col-lg-4 col-6">
                         <div class="item-inner">
                             <div class="icon-holder">
+				    <i class="far fa-question-circle"></i>
                                 <span aria-hidden="true" class="icon icon_gift"></span>
                             </div><!--//icon-holder-->
                             <h3 class="title">Fequently Asked Questions (FAQ)</h3>
