--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <div class="item item-pink item-2 col-lg-4 col-6">
                         <div class="item-inner">
                             <div class="icon-holder">
-				    <i class="icon fa-thumbs-up"></i>
+				    <i class="icon fa fa-paper-plane"></i>
                                 <span aria-hidden="true" class="icon icon_puzzle_alt"></span>
                             </div><!--//icon-holder-->
                             <h3 class="title">0. How-To Getting Started with uKit Explore (HW) & uCode (SW)</h3>
@@ -96,7 +96,7 @@
                     <div class="item item-blue col-lg-4 col-6">
                         <div class="item-inner">
                             <div class="icon-holder">
-				    <i class="icon fa-tools"></i>
+				    <i class="icon fa fa-paper-plane"></i>
                                 <span aria-hidden="true" class="icon icon_datareport_alt"></span>
                             </div><!--//icon-holder-->
                             <h3 class="title">1. How-To Assemble AI Car & Props</h3>
@@ -108,7 +108,7 @@
                     <div class="item item-purple col-lg-4 col-6">
                         <div class="item-inner">
                             <div class="icon-holder">
-				    <i class="icon fa-mobile-alt"></i>
+				    <i class="icon fa fa-paper-plane"></i>
                                 <span aria-hidden="true" class="icon icon_lifesaver"></span>
                             </div><!--//icon-holder-->
                             <h3 class="title">2. Android/iPhone Mobile Camera As a Webcam Source for uCode software</h3>
@@ -120,7 +120,7 @@
                     <div class="item item-primary col-lg-4 col-6">
                         <div class="item-inner">
                             <div class="icon-holder">
-				    <i class="icon fa-car"></i>
+				    <i class="icon fa fa-paper-plane"></i>
                                 <span aria-hidden="true" class="icon icon_genius"></span>
                             </div><!--//icon-holder-->
                             <h3 class="title">3. Train Machine Learning model for AI Car in uCode for road signs classification</h3>
@@ -132,7 +132,7 @@
                     <div class="item item-orange col-lg-4 col-6">
                         <div class="item-inner">
                             <div class="icon-holder">
-				    <i class="icon fa-question-circle"></i>
+				    <i class="icon fa fa-paper-plane"></i>
                                 <span aria-hidden="true" class="icon icon_gift"></span>
                             </div><!--//icon-holder-->
                             <h3 class="title">Fequently Asked Questions (FAQ)</h3>
