--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <div class="item item-pink item-2 col-lg-4 col-6">
                         <div class="item-inner">
                             <div class="icon-holder">
-				    <i class="icon fa fa-paper-plane"></i>
+				   <i class="fas fa-paper-plane"></i>
                                 <span aria-hidden="true" class="icon icon_puzzle_alt"></span>
                             </div><!--//icon-holder-->
                             <h3 class="title">0. How-To Getting Started with uKit Explore (HW) & uCode (SW)</h3>
