--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <div class="item item-orange col-lg-4 col-6">
                         <div class="item-inner">
                             <div class="icon-holder">
-				    <i class=" fa fa-question-circle"></i>
+				    <i class="icon far fa-question-circle"></i>
                                 <span aria-hidden="true" class="icon icon_gift"></span>
                             </div><!--//icon-holder-->
                             <h3 class="title">Fequently Asked Questions (FAQ)</h3>
