--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 		
 		<a href="https://www.ubtrobot.com/?ls=en" target="blank"  class="social-margin">
                   <div class="social-icon websitee">
-                    <i class="fas fa-globe" aria-hidden="true"></i>
+                    <i class="fa fa-globe" aria-hidden="true"></i>
                   </div> 
                 </a>
 		    
