--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
                 </a>
 		
 		<a href="https://www.ubtrobot.com/?ls=en" target="blank"  class="social-margin">
-                  <div class="social-icon websitee">
-                    <i class="fa fa-globe" aria-hidden="true"></i>
+                  <div class="social-icon website">
+                    <i class="fas fa-globe" aria-hidden="true"></i>
                   </div> 
                 </a>
 		    
