--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 				    <i class="icon far fa-question-circle"></i>
                                 <span aria-hidden="true" class="icon icon_gift"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title">Fequently Asked Questions (FAQ)</h3>
+                            <h3 class="title">Frequently Asked Questions (FAQ)</h3>
                             <p class="intro">Common issues faced while exploring uKit Explore and uCode.</p>
                             <a class="link" href="https://sjcosmofuture-my.sharepoint.com/:w:/p/vincentkok/EcfC_iE-tFlIn7-EDFWMAZABNrmz9spf2pOyToadMXqLrg?e=Ujgg7X" target="_blank"><span></span></a>
                         </div><!--//item-inner-->
