--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
 				    <i class="icon fas fa-car"></i>
                                 <span aria-hidden="true" class="icon icon_genius"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title">3. Train Machine Learning model for AI Car in uCode for road signs classification</h3>
+                            <h3 class="title">3. How-To Connect uKit Explore via Bluetooth for NEW SET </h3>
                             <p class="intro">Learn how to train simple machine learning model for AI car to recognize different road signs!</p>
                             <img src="./assets/images/3.png" alt="aicar" width="100">
-			    <a class="link" href="https://vincentk16.github.io/3.%20Train%20Machine%20Learning%20model%20for%20AI%20Car%20in%20uCode%20for%20road%20signs%20classification.pdf" target="_blank"><span></span></a>
+			    <a class="link" href="https://vincentk16.github.io/3.%20How-To%20Connect%20uKit%20Explore%20via%20Bluetooth%20for%20NEW%20SET.pdf" target="_blank"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
                     <div class="item item-orange col-lg-4 col-6">
@@ -135,15 +135,21 @@
 				    <i class="icon far fa-question-circle"></i>
                                 <span aria-hidden="true" class="icon icon_gift"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title">Frequently Asked Questions (FAQ)</h3>
+                            <h3 class="title">4. Train Machine Learning model for AI Car in uCode for road signs classification</h3>
                             <p class="intro">Common issues faced while exploring uKit Explore and uCode.</p>
-                            <a class="link" href="https://sjcosmofuture-my.sharepoint.com/:w:/p/vincentkok/EcfC_iE-tFlIn7-EDFWMAZABNrmz9spf2pOyToadMXqLrg?e=Ujgg7X" target="_blank"><span></span></a>
+                            <a class="link" href="https://vincentk16.github.io/4.%20Train%20Machine%20Learning%20model%20for%20AI%20Car%20in%20uCode%20for%20road%20signs%20classification.pdf" target="_blank"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
                 </div><!--//cards-->
 		
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/MFDubNtBQIE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		    
+		    <br></br>
+		<div class="cta-container">
+			   
+                        <a class="btn btn-primary btn-cta" href="https://sjcosmofuture-my.sharepoint.com/:w:/p/vincentkok/EcfC_iE-tFlIn7-EDFWMAZABNrmz9spf2pOyToadMXqLrg?e=Ujgg7X" target="_blank"><i class="fas fa-cloud-
+				-alt"></i> Frequently Asked Questions (FAQs) </a>
+                    </div><!--//cta-container-->
+		<br></br>
                 <p> If you had any problems accessing the resources, please contact Vincent at <u>vincentkok@sjcosmofuture.com</u>. Thank you! </p>
 		<a href="https://www.facebook.com/ubtechrobotics.ap" target="blank" class="social-margin"> 
                   <div class="social-icon facebook">
