--- a/index.html
+++ b/index.html
@@ -120,23 +120,24 @@
                     <div class="item item-primary col-lg-4 col-6">
                         <div class="item-inner">
                             <div class="icon-holder">
-				    <i class="icon fas fa-car"></i>
+				    <i class="icon fab fa-bluetooth"></i>
                                 <span aria-hidden="true" class="icon icon_genius"></span>
                             </div><!--//icon-holder-->
                             <h3 class="title">3. How-To Connect uKit Explore via Bluetooth for NEW SET </h3>
-                            <p class="intro">Learn how to train simple machine learning model for AI car to recognize different road signs!</p>
-                            <img src="./assets/images/3.png" alt="aicar" width="100">
+                            <p class="intro">Guide on how to connect uKit Explore via Bluetooth for NEW SET</p>
+                            <img src="./assets/images/4.png" alt="aicar" width="100">
 			    <a class="link" href="https://vincentk16.github.io/3.%20How-To%20Connect%20uKit%20Explore%20via%20Bluetooth%20for%20NEW%20SET.pdf" target="_blank"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
                     <div class="item item-orange col-lg-4 col-6">
                         <div class="item-inner">
                             <div class="icon-holder">
-				    <i class="icon far fa-question-circle"></i>
+				    <i class="icon fas fa-car"></i>
                                 <span aria-hidden="true" class="icon icon_gift"></span>
                             </div><!--//icon-holder-->
                             <h3 class="title">4. Train Machine Learning model for AI Car in uCode for road signs classification</h3>
-                            <p class="intro">Common issues faced while exploring uKit Explore and uCode.</p>
+                            <p class="intro">Learn how to train simple machine learning model for AI car to recognize different road signs!</p>
+			     <img src="./assets/images/3.png" alt="bt" width="100">
                             <a class="link" href="https://vincentk16.github.io/4.%20Train%20Machine%20Learning%20model%20for%20AI%20Car%20in%20uCode%20for%20road%20signs%20classification.pdf" target="_blank"><span></span></a>
                         </div><!--//item-inner-->
                     </div><!--//item-->
